--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "todo-api",
+  "name": "node-todo-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "test": "export NODE_ENV=test || SET NODE_ENV=test && mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cswarbreck/todo-api.git"
+  "engines": {
+    "node": "6.2.2"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/cswarbreck/todo-api/issues"
-  },
-  "homepage": "https://github.com/cswarbreck/todo-api#readme",
   "dependencies": {
-    "mongodb": "^3.0.7"
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "lodash": "^4.15.0",
+    "mongodb": "^2.2.5",
+    "mongoose": "^4.5.9",
+    "validator": "^5.6.0"
+  },
+  "devDependencies": {
+    "expect": "^1.20.2",
+    "mocha": "^3.0.2",
+    "nodemon": "^1.10.2",
+    "supertest": "^2.0.0"
   }
 }
